# synco

./: .dockerignore  .env.example  .gitignore  CHECK_LIST.md  CLAUDE.md  Dockerfile  README.md  TODOS.md  UI_UX_REVIEW_CHECKLIST.md  alembic.ini  conftest.py  deploy.sh  dev.sh  docker-compose.yml  docker-stack.yml  main.py  package-lock.json  parsed_resume_kang_moonseok.json  parsed_resume_kim_donghyun.json  parsed_resume_kim_jaehong.json  parsed_resume_kim_kiseong.json  parsed_resume_kim_shinhoon.json  parsed_resume_kim_youngsoo.json  parsed_resume_kwon_seokwon.json  parsed_resume_output.json  pyproject.toml  requirements.txt  resume_parsing_result.json  tailwind.config.js
.claude/: settings.json
.gstack-audit/: interaction-test-report.md
accounts/: admin.py  backends.py  context_processors.py  decorators.py  forms.py  helpers.py  models.py  urls.py  urls_org.py  urls_superadmin.py  views.py  views_org.py  views_superadmin.py  views_team.py
alembic/: env.py
app/: main.py
assets/: sample_s.xlsx  test_import_small.xlsx  섭외_손진석지점장님(2020-2025).xlsx
batch_extract/: admin.py  apps.py  models.py
candidates/: admin.py  models.py  serializers_extension.py  tests.py  urls.py  views.py  views_extension.py
clients/: admin.py  forms.py  forms_reference.py  models.py  urls.py  urls_reference.py  views.py  views_reference.py
common/: claude.py  embedding.py  llm.py  mixins.py
contacts/: models.py  urls.py  views.py
data_extraction/: admin.py  apps.py  models.py
deploy/: docker-stack-synco.yml
docs/: HANDOFF.md  MVP-PLAN.md  PROGRESS.md  README.md  SPIKE-REPORT.md  STATUS.md  action-plan-30-days.md  candidate-detail-checklist.md  candidate-detail-review-r1.md  (+17 more)
(+1238 files in other folders)
