[project]
name = "synco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.12",
    "django-htmx>=1.27.0",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.1.0",
    "dj-database-url>=2.3.0",
    "httpx>=0.28.0",
    "django-widget-tweaks>=1.5.0",
    "gunicorn>=23.0.0",
    "whitenoise>=6.9.0",
    "openpyxl>=3.1.0",
    "google-genai>=1.0.0",
    "pgvector>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.0",
    "pytest>=8.0.0",
    "pytest-django>=4.9.0",
]
